# kaspi_stocks_manager

./: .env.dist  .gitignore  manage.py  pyproject.toml
account/: admin.py  forms.py  models.py  services.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_offer_available_stores_delete_offeravailability.py
account/static/account/assets/styles/: forms.css
account/templates/account/: base.html  header.html  offers.xml
account/templates/account/components/: header.html
account/templates/account/components/forms/: create_company.html  create_offer.html  create_store.html
account/templates/account/errors/: 400.html  403.html  404.html  500.html
account/templates/account/pages/: companies.html  company.html  company_create.html  faq.html  offer.html  offer_create.html  offers.html  store.html  store_delete.html  stores.html
account/templates/account/registration/: change_password.html  login.html  logout.html  register.html
kaspi_stocks/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
