[tool.poetry]
name = "kaspi_stocks"
version = "0.1.0"
description = ""
authors = ["eldos <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-environ = "^0.9.0"
django-widget-tweaks = "^1.4.12"
psycopg2-binary = "^2.9.3"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
